fix clicking on white space in container

--- a/style.css
+++ b/style.css
@@ -16,7 +16,6 @@
 }
 
 body {
-  cursor: url('images/smashBro\ \(11\).png'), auto;
   background: rgb(2,0,36);
   background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(89,89,130,1) 35%, rgba(0,212,255,1) 100%);
 }
